Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3645

[qgen] Check failed: !ExprContext::HasLocalAllocations(probe_expr_ctxs_)

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    Description

      Over the weekend the query generator caught a DCHECK failure.

      Backtrace:

      google::LogMessageFatal::~LogMessageFatal() ()
      impala::PartitionedHashJoinNode::ProcessBuildInput (this=0xe54b180, state=0x11176100, level=0) at /home/dev/Impala/be/src/exec/partitioned-hash-join-node.cc:679
      impala::PartitionedHashJoinNode::ConstructBuildSide (this=0xe54b180, state=0x11176100) at /home/dev/Impala/be/src/exec/partitioned-hash-join-node.cc:629
      impala::BlockingJoinNode::BuildSideThread (this=0xe54b180, state=0x11176100, status=0x7f47cda4d5e0) at /home/dev/Impala/be/src/exec/blocking-join-node.cc:143
      boost::_mfi::mf2*>::operator() (this=0x174e18f0, p=0xe54b180, a1=0x11176100, a2=0x7f47cda4d5e0) at /opt/Impala-Toolchain/boost-1.57.0/include/boost/bind/mem_fn_template.hpp:280
      boost::_bi::list3, boost::_bi::value, boost::_bi::value*> >::operator()*>, boost::_bi::list0> (this=0x174e1900, f=..., a=...) at /opt/Impala-Toolchain/boost-1.57.0/include/boost/bind/bind.hpp:392
      boost::_bi::bind_t*>, boost::_bi::list3, boost::_bi::value, boost::_bi::value*> > >::operator() (this=0x174e18f0) at /opt/Impala-Toolchain/boost-1.57.0/include/boost/bind/bind_template.hpp:20
      boost::detail::function::void_function_obj_invoker0*>, boost::_bi::list3, boost::_bi::value, boost::_bi::value*> > >, void>::invoke (function_obj_ptr=...) at /opt/Impala-Toolchain/boost-1.57.0/include/boost/function/function_template.hpp:153
      boost::function0::operator() (this=0x7f47c6230da0) at /opt/Impala-Toolchain/boost-1.57.0/include/boost/function/function_template.hpp:767
      impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function, impala::Promise*) (name=..., category=..., functor=..., thread_started=0x7f47cda4d3a0) at /home/dev/Impala/be/src/util/thread.cc:315
      boost::_bi::list4, boost::_bi::value, boost::_bi::value >, boost::_bi::value*> >::operator(), impala::Promise*), boost::_bi::list0>(boost::_bi::type, void (*&)(std::string const&, std::string const&, boost::function, impala::Promise*), boost::_bi::list0&, int) (this=0xf5287c0, f=@0xf5287b8: 0x15b3566 , impala::Promise*)>, a=...) at /opt/Impala-Toolchain/boost-1.57.0/include/boost/bind/bind.hpp:457
      boost::_bi::bind_t, impala::Promise*), boost::_bi::list4, boost::_bi::value, boost::_bi::value >, boost::_bi::value*> > >::operator()() (this=0xf5287b8) at /opt/Impala-Toolchain/boost-1.57.0/include/boost/bind/bind_template.hpp:20
      boost::detail::thread_data, impala::Promise*), boost::_bi::list4, boost::_bi::value, boost::_bi::value >, boost::_bi::value*> > > >::run() (this=0xf528600) at /opt/Impala-Toolchain/boost-1.57.0/include/boost/thread/detail/thread.hpp:116
      thread_proxy ()
      start_thread (arg=0x7f47c6231700) at pthread_create.c:312
      clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

      query:

      USE randomness;
      SELECT
      a1.boolean_col_10,
      SUM(a1.int_col_2) AS int_col,
      a1.timestamp_col_6 + INTERVAL a4.int_col MINUTE AS timestamp_col,
      COALESCE(LEAD(-952, 78) OVER (ORDER BY a1.boolean_col_10 DESC, a1.timestamp_col_6 + INTERVAL a4.int_col MINUTE ASC), -609, 808) AS int_col_1
      FROM table_10 a1
      LEFT JOIN (
      SELECT
      FLOOR(a2.decimal3631_col_16) AS decimal_col,
      EXTRACT(MINUTE FROM MAX(DISTINCT a3.timestamp_col_4 + INTERVAL a2.int_col_30 HOUR)) AS int_col
      FROM table_6 a2
      LEFT JOIN table_7 a3 ON (a3.decimal2019_col_1) = (a2.decimal1406_col_14)
      GROUP BY
      FLOOR(a2.decimal3631_col_16)
      ) a4 ON ((a4.int_col) = (a1.int_col_2)) AND ((a4.int_col) = (a1.int_col_2))
      GROUP BY
      a1.boolean_col_10,
      a1.timestamp_col_6 + INTERVAL a4.int_col MINUTE
      HAVING
      (MIN(576.323568562)) > (-632);
      

      A docker container has the random data already loaded and I can reproduce the failure. There are also cores in /tmp/core_files on that container. I'll copy over to impala-desktop also.

      ssh -p 2223 dev@vd0206.halxg.cloudera.com

      If you're not able to guess the password, send me a message.

      This was on hash d6a9a55183447b6f8cc037f9c4ffe04fc2998c66

      Note this same hash has had hundreds of other random queries run against it, and only 1 instance so far of this.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            kwho Michael Ho
            mikeb Michael Brown
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment